Add links to index.html file in root directory
Prior commit message before this summarizes things
perfectly. I was just clumsy and forgot I was in
the "images" directory when I did "git add ."

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <h1>Odin Recipes</h1>
 
     <ul>
-    <li><a href="./recipes/taco.html">High Protein Low Calorie Taco</a></li>
-    <li><a href="./recipes/pizza.html">Mexican Pizza</a></li>
+    <li><a href="./recipes/taco.html" target="_self" rel="noopener noreferrer">High Protein Low Calorie Taco</a></li>
+    <li><a href="./recipes/pizza.html" target="_self" rel="noopener noreferrer">Mexican Pizza</a></li>
+    <li><a href="./recipes/mac-cheese.html" target="_self" rel="noopener noreferrer">Mac And Cheese</a></li>
     </ul>
 </body>
 </html>
