--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,12 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mexian Pizza Recipe</title>
+    <title>Mexican Pizza Recipe</title>
 </head>
 
 <body>
     <h1>Mexican Pizza</h1>
 
-    <img src="../images/pizza.jpg" alt="Mexican Pizza" height="512" width="512">
+    <img src="../images/pizza.jpg" alt="Mexican Pizza" height="200" width="200">
+
+    <h4>This Mexican pizza recipe layers delicious seasoned ground beef and
+         refried beans between two crisp tortillas. Top with salsa, cheese,
+          tomatoes, and jalapeño for incredible flavor in every bite!</h4>
+
+    <p><strong>Ingredients:</strong></p>
+
+        <ul>
+            <li>1/2 Pound Ground Beef</li>
+            <li>1 Medium Onion, Diced</li>
+            <li>1 Clove Garlic, Minced</li>
+            <li>1 Tablespoon Chili Powder</li>
+            <li>1 Teaspoon Ground Cumin</li>
+            <li>1/2 Teaspoon Paprika</li>
+            <li>1/2 Teaspoon Salt</li>
+            <li>1/2 Teaspoon Black Pepper</li>
+            <li>1 (16 ounce) Can Refried Beans</li>
+            <li>4 (10 inch) Flour Tortillas</li>
+            <li>1/2 Cup Salsa</li>
+            <li>1 Cup Shredded Cheddar Cheese</li>
+            <li>1 Cup Shredded Monterey Jack Cheese</li>
+            <li>2 Green Onions, Chopped</li>
+            <li>2 Tomatoes, Diced</li>
+            <li>1/4 Cup Thinly Sliced Jalapeño Pepper</li>
+            <li>1/4 Cup Sour Cream (Optional)</li>
+        </ul>
+
+        <p><strong>Instructions:</strong></p>
+
+        <ol>
+            <li>Cook the beef with onions and garlic, drain, and season.</li>
+            <li>Place a tortilla on each pie plate and top with refried beans.</li>
+            <li>Cover with the beef, top with another tortilla, and bake until the tortillas are crisp.</li> 
+            <li>Layer the toppings in this order: Salsa, cheeses, tomatoes, green onions, and jalapeño.</li>
+            <li>Bake until the cheese is melted. Cool, then cut each pizza into four slices.</li>
+        </ol>
+
+    <a href="../index.html" target="_self" rel="noopener noreferrer">Home</a>
 </body>
 </html>
