--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -15,7 +15,7 @@
         I just had to make a variant of this amazing dish that's both
         tasty and healthier than a traditional taco.</h4>
 
-        <p><strong>Ingredients</strong></p>
+        <p><strong>Ingredients:</strong></p>
 
         <ul>
             <li>Water</li>
@@ -26,6 +26,8 @@
             <li>Daisy No Fat Sour Cream</li>
         </ul>
 
+        <p><strong>Instructions:</strong></p>
+    
         <ol>
             <li>Set desired burner to "medium-high." Grab
                 designated pan and brown ground turkey.</li>
@@ -45,6 +47,6 @@
             <li>Last but most important step: enjoy!</li>
         </ol>
 
-    <a href="../index.html">Home</a>
+    <a href="../index.html" target="_self" rel="noopener noreferrer">Home</a>
 </body>
 </html>
