Add instructions and ingredients to final recipe
I added the instructions and ingredients to the
final recipe "mac-cheese.html". The project is
complete.

--- a/recipes/mac-cheese.html
+++ b/recipes/mac-cheese.html
@@ -14,6 +14,39 @@
         assemble in a slow cooker. Great for large family gatherings and to take to 
         potluck dinners. It's always a big hit!</h4>
 
+        <p><strong>Ingredients:</strong></p>
+
+        <ul>
+            <li>1 (16 ounce) Package Elbow Macaroni</li>
+            <li>1/2 Cup Butter</li>
+            <li>Salt And Ground Black Pepper To Taste</li>
+            <li>1 (16 ounce) Package Shredded Cheddar Cheese, Divided</li>
+            <li>1 (5 ounce) Can Evaporated Milk</li>
+            <li>2 Large Eggs, Well Beaten</li> 
+            <li>2 Cups Whole Milk</li>
+            <li>1 (10.5 ounce) Can Condensed Cheddar Cheese Soup</li>
+        </ul>
+
+        <p><strong>Instructions:</strong></p>
+
+        <ol>
+            <li>Fill a large pot with lightly salted water and bring to a rolling boil. 
+                Stir in macaroni and return to a boil. Cook pasta uncovered, stirring 
+                occasionally, until tender yet firm to the bite, about 8 minutes. 
+                Drain and transfer pasta to a slow cooker.</li>
+            <li>Add butter to pasta and stir until melted; season with salt and pepper. 
+                Sprinkle about 1/2 of the Cheddar cheese over pasta and stir.</li>
+            <li>Whisk evaporated milk and eggs together in a bowl until smooth; stir 
+                into pasta mixture.</li>
+            <li>Whisk milk and condensed soup together in a bowl until smooth; stir 
+                into pasta mixture.</li>
+            <li>Sprinkle remaining cheese over pasta mixture; garnish with paprika.</li>
+            <li>Cook on Low for 3 hours, checking the edges are not getting too brown 
+                after 2 1/2 hours.</li>
+            <li>Serve hot and enjoy!</li>
+        </ol>
+
     <a href="../index.html" target="_self" referrerpolicy="noopener noreferrer">Home</a>
+
 </body>
 </html>
