Add css in my index.html and all other pages I added style to all my pages!

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-
+    <h1 class="title">Welcome To My First Project</h1>
+    <h3 class="recipe-title">My Odin Recipes</h3>
+    <h5>⬇️ Click the following recipes to start learning! ⬇</h5>
+    <div class="links">
     <ul>
-    <li><a href="./recipes/taco.html" target="_self" rel="noopener noreferrer">High Protein Low Calorie Taco</a></li>
-    <li><a href="./recipes/pizza.html" target="_self" rel="noopener noreferrer">Mexican Pizza</a></li>
-    <li><a href="./recipes/mac-cheese.html" target="_self" rel="noopener noreferrer">Mac And Cheese</a></li>
+    <li><a href="./recipes/taco/taco.html" target="_self" rel="noopener noreferrer">High Protein Low Calorie Taco</a></li>
+    <li><a href="./recipes/pizza/pizza.html" target="_self" rel="noopener noreferrer">Mexican Pizza</a></li> 
+    <li><a href="./recipes/mac-cheese/mac-cheese.html" target="_self" rel="noopener noreferrer">Mac And Cheese</a></li>
+    </div>
     </ul>
 </body>
 </html>
