--- a/recipes/mac-cheese/mac-cheese.html
+++ b/recipes/mac-cheese/mac-cheese.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <title>Mac And Cheese Recipe</title>
 </head>
@@ -8,13 +9,13 @@
 <body>
     <h1>Mac And Cheese</h1>
 
-    <img src="../images/mac-cheese.jpg" alt="Mac and Cheese" height="200" width="250">
+    <img src="../images/mac-cheese.jpg" alt="Mac and Cheese" height="auto" width="250">
 
     <h4>This crockpot mac and cheese is creamy, comforting, and takes just moments to 
         assemble in a slow cooker. Great for large family gatherings and to take to 
         potluck dinners. It's always a big hit!</h4>
 
-        <p><strong>Ingredients:</strong></p>
+        <p class="sub-header"><strong>Ingredients:</strong></p>
 
         <ul>
             <li>1 (16 ounce) Package Elbow Macaroni</li>
@@ -27,7 +28,7 @@
             <li>1 (10.5 ounce) Can Condensed Cheddar Cheese Soup</li>
         </ul>
 
-        <p><strong>Instructions:</strong></p>
+        <p class="sub-header"><strong>Instructions:</strong></p>
 
         <ol>
             <li>Fill a large pot with lightly salted water and bring to a rolling boil. 
@@ -46,7 +47,7 @@
             <li>Serve hot and enjoy!</li>
         </ol>
 
-    <a href="../index.html" target="_self" referrerpolicy="noopener noreferrer">Home</a>
+    <a href="../../index.html" target="_self" referrerpolicy="noopener noreferrer"><button>Home</button></a>
 
 </body>
 </html>
