--- a/recipes/pizza/pizza.html
+++ b/recipes/pizza/pizza.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mexican Pizza Recipe</title>
@@ -15,7 +16,7 @@
          refried beans between two crisp tortillas. Top with salsa, cheese,
           tomatoes, and jalapeño for incredible flavor in every bite!</h4>
 
-    <p><strong>Ingredients:</strong></p>
+    <p class="sub-header"><strong>Ingredients:</strong></p>
 
         <ul>
             <li>1/2 Pound Ground Beef</li>
@@ -37,7 +38,7 @@
             <li>1/4 Cup Sour Cream (Optional)</li>
         </ul>
 
-        <p><strong>Instructions:</strong></p>
+        <p class="sub-header"><strong>Instructions:</strong></p>
 
         <ol>
             <li>Cook the beef with onions and garlic, drain, and season.</li>
@@ -47,6 +48,6 @@
             <li>Bake until the cheese is melted. Cool, then cut each pizza into four slices.</li>
         </ol>
 
-    <a href="../index.html" target="_self" rel="noopener noreferrer">Home</a>
+    <a href="../../index.html" target="_self" rel="noopener noreferrer"><button>Home</button></a>
 </body>
 </html>
