Delete css from taco page I deleted some unneeded css from the taco page of my webpage.

--- a/recipes/taco/taco.html
+++ b/recipes/taco/taco.html
@@ -29,22 +29,22 @@
         <p class="sub-header"><strong>Instructions:</strong></p>
     
         <ol>
-            <li class="list-demo">Set desired burner to "medium-high." Grab
+            <li>Set desired burner to "medium-high." Grab
                 designated pan and brown ground turkey.</li>
-            <li class="list-demo">Change burner heat from "medium-high" to "medium-low.</li>
-            <div class="bold-caution"><strong>- While you do this step, preheat oven to 300°F.</strong></div>
-            <li class="list-demo">Add 3/4 cup of water to pan.</li>
-            <li class="list-demo">Add Taco Bell Seasoning Mix and stir.</li>
-            <li class="list-demo">Grab lid and cover pan for 10 minutes, stirring periodically.</li>
-            <li class="list-demo">Once your oven is preheated, grab a baking pan and put desired
+            <li>Change burner heat from "medium-high" to "medium-low.</li>
+            <div><strong>- While you do this step, preheat oven to 300°F.</strong></div>
+            <li>Add 3/4 cup of water to pan.</li>
+            <li>Add Taco Bell Seasoning Mix and stir.</li>
+            <li>Grab lid and cover pan for 10 minutes, stirring periodically.</li>
+            <li>Once your oven is preheated, grab a baking pan and put desired
                 amount of taco shells on pan. Put it in the oven for about 5 minutes.</li>
-            <li class="list-demo">Grab your desired condiments and fixings; in this recipe, I opted for
+            <li>Grab your desired condiments and fixings; in this recipe, I opted for
                 "Kraft No Fat Shredded Cheese" and "Daisy No Fat Sour Cream."
-            <li class="list-demo">Once completed, take your pan off the burner.</li>
-            <li class="list-demo">Take taco shells out of oven, let them sit for a minute or two to cool.</li>
-            <li class="list-demo">Grab a spatula. Scoop a serving of your finished taco meat in a taco shell
+            <li>Once completed, take your pan off the burner.</li>
+            <li>Take taco shells out of oven, let them sit for a minute or two to cool.</li>
+            <li>Grab a spatula. Scoop a serving of your finished taco meat in a taco shell
                 and add the fixings listed in the "Ingredients" portion of this page.</li>
-            <li class="list-demo">Last but most important step: enjoy!</li>
+            <li>Last but most important step: enjoy!</li>
         </ol>
 
     <a href="../../index.html" target="_self" rel="noopener noreferrer"><button>Home</button></a>
